--- a/spacebrew_button/css/style.css
+++ b/spacebrew_button/css/style.css
@@ -39,7 +39,9 @@ a, a:link, a:visited { text-decoration: none; }
    text-align: center;
    color: rgba(255,255,255,1);
    font-weight: bold;
-   text-shadow: 0px -1px 0px rgba(0,0,0,0.66)
+   text-shadow: 0px -1px 0px rgba(0,0,0,0.66);
+   -webkit-user-select:none;
+   cursor: pointer;
 }
 .button:hover {
    background-image: -webkit-linear-gradient(top, rgba(43,165,240,1) 0%,rgba(6,103,164,1) 100%);
