added reconnect functionality into the javascript library - by default it is turned on. Also added a random number to the end of the app name in the example apps, when users do not customize the name via query string.

--- a/spacebrew_string/css/style.css
+++ b/spacebrew_string/css/style.css
@@ -55,3 +55,7 @@ a, a:link, a:visited { text-decoration: none; }
       -moz-transform: translateY(1px);
            transform: translateY(1px);
 }
+
+span {
+	line-height: 100%;
+}
