--- a/spacebrew_piano/css/style.css
+++ b/spacebrew_piano/css/style.css
@@ -34,3 +34,22 @@ html, body {
    border: none;
    background-color:rgba(99,0,124,1);
 }
+
+#mobileStart {
+   top:0px;
+   left:0px;
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   z-index: 10;
+   background-color:#c600f8;
+   color: white;
+   visibility: hidden;
+   display: none;
+   font-size: 20vh;
+   line-height: 70vh;
+   text-align: center;
+   display: flex;
+   font-weight: bold;
+   flex-direction: column;
+}
